# atlas-rag

./: .codexignore  .gitignore  .tool-versions  LLM_UI_CATCHUP_PLAN.md  Makefile  RAG_MILESTONE_PLAN.md  README.md
apps/api/: .dockerignore  .env.example  .envrc  Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  db.py  main.py  models.py
apps/api/app/api/: chat.py  chunks.py  documents.py  upload.py
apps/api/app/chat/: chat_errors.py  chat_models.py  chat_service.py  chat_shadow.py  chat_stream.py
apps/api/app/core/: __init__.py  health.py  metrics.py  observability.py  reliability.py  retrieval_flags.py  startup_config.py
apps/api/app/ingest/: __init__.py  chunker.py  embeddings.py  ingest_txt.py  pgvector_dim.py  store.py
apps/api/app/providers/: __init__.py  factory.py
apps/api/app/providers/embeddings/: __init__.py  base.py  bge_large.py  bge_small.py  hash.py  hf_local.py  registry.py  sentence_transformer.py  tei.py
apps/api/app/rag/: __init__.py  retrieval_strategy.py  retriever.py
apps/api/app/schemas/: __init__.py  content.py
apps/api/app/scripts/: __init__.py  pgvector_smoke.py  retrieve_smoke.py
apps/api/data/: example.txt  test_document.txt
apps/api/scripts/: observability_smoke.py  pgvector_smoke.py  reliability_smoke.py  retrieval_rollout_smoke.py  retrieve_smoke.py  test_upload.py
apps/api/tests/: test_chunker_normalization.py  test_observability.py  test_reliability_health.py  test_retrieval_flags.py  test_retrieval_shadow_strategy.py  test_shadow_metrics.py  test_startup_config.py  test_upload_validation.py
(+54 files in other folders)
