[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "httpx>=0.28.1",
  "pgvector>=0.4.2",
  "fpdf>=1.7.2",
  "reportlab>=4.2.0",
  "pypdf>=4.3.1",
  "psycopg2-binary>=2.9.11",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.21",
  "sentence-transformers>=5.2.0",
  "sqlalchemy>=2.0.45",
  "torch>=2.10.0",
  "uvicorn>=0.40.0",
  "langchain>=1.2.9",
  "langchain-text-splitters>=1.1.0",
  "pytest>=9.0.2",
]
